@@ -2,10 +2,12 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.02 [20070822]
+ChangeLog for sdparm-1.02 [20070826]
   - support mode page descriptors with
     <acronym_name>[.<descriptor_num] syntax
-    - "2_<acronym>" type entries as replaced by new syntax
+    - "2_<acronym>" type entries replaced by new syntax
+    - support medium partition mpage (SSC) with partitions
+      as descriptors
   - append relative target port identifier to SAS target
     port address with '-iq' option
   - add solaris port
